--- a/src/pages/questions/questions.html
+++ b/src/pages/questions/questions.html
@@ -11,7 +11,7 @@
   </ion-navbar>
 
 </ion-header>
-<ion-content padding>
+<!-- <ion-content padding>
   <ion-grid>
     <ion-row justify-content-center>
       <ion-col>
@@ -40,4 +40,4 @@
       </ion-col>
     </ion-row>
   </ion-grid>
-</ion-content>
+</ion-content> -->
