We can now generate exercices and questions

--- a/src/pages/elo/elo.html
+++ b/src/pages/elo/elo.html
@@ -6,8 +6,8 @@
 -->
 <ion-header>
 
-  <ion-navbar>
-    <ion-title class="primary">
+  <ion-navbar color="primary">
+    <ion-title>
       Elo ranking
     </ion-title>
   </ion-navbar>
