some changes in questions page

--- a/src/pages/questions/questions.html
+++ b/src/pages/questions/questions.html
@@ -20,7 +20,7 @@
       </ion-col>
     </ion-row>
     <ion-row justify-content-center>
-      <button ion-button class="sound_btn" (click)="playSound(currentQuestion.answer)">
+      <button ion-button class="sound_btn" (click)="playSound(currentQuestion.notes)">
         <ion-icon name="musical-notes"></ion-icon>
       </button>
     </ion-row>
