Add tone js to questions , rank calcul and intervalle play

--- a/src/pages/questions/questions.html
+++ b/src/pages/questions/questions.html
@@ -26,8 +26,8 @@
     </ion-row>
     <ion-row justify-content-center>
       <ion-col  ng col-3 class="choices"*ngFor="let choice of choices" (click)="checkAnswer(choice.position,$event)" [ngSwitch]="choice.name == currentQuestion.answer.name">
-        <button *ngSwitchCase="true" ion-button (click)="playSound(choice)" [ngClass]="{'disableGood':btnSwitch,'enable':!btnSwitch}" >{{choice.name}}</button>
-        <button *ngSwitchCase="false" ion-button (click)="playSound(choice)" [ngClass]="{'disableFalse':btnSwitch,'enable':!btnSwitch}" >{{choice.name}}</button>
+        <button *ngSwitchCase="true" ion-button (click)="playSoundFromChoices(choice)" [ngClass]="{'disableGood':btnSwitch,'enable':!btnSwitch}" >{{choice.name}}</button>
+        <button *ngSwitchCase="false" ion-button (click)="playSoundFromChoices(choice)" [ngClass]="{'disableFalse':btnSwitch,'enable':!btnSwitch}" >{{choice.name}}</button>
       </ion-col>
     </ion-row>
     <ion-row>
