--- a/src/pages/questions/questions.html
+++ b/src/pages/questions/questions.html
@@ -5,9 +5,9 @@
   Ionic pages and navigation.
 -->
 <ion-header>
-  <ion-navbar>
-    <ion-title>{{type.name}}</ion-title>
-    <ion-title>Level {{rank}}</ion-title>
+  <ion-navbar hideBackButton="true" color="primary">
+    <ion-title float-start>{{type.name}}</ion-title>
+    <ion-title float-end>Level {{rank}}</ion-title>
   </ion-navbar>
 </ion-header>
 <ion-content padding>
